# cartero

./: .gitignore  AGENTS.md  README.md  commit-summary.yaml  context.txt  notes.txt  override-context.txt  pyproject.toml  temp-note.txt  test_changelog.py  valid-session-block.txt
.cartero/: session-notes.md
.cartero/archive/: session-notes-2026-04-06-235745.md  session-summary-2026-04-06-231218-raw.md  session-summary-2026-04-06-231332-raw.md  session-summary-2026-04-06-233336-normalized.md  session-summary-2026-04-06-233336-raw.md  (+3 more)
cartero/: __init__.py  __main__.py  canonical.py  cli.py  config.py  context_state.py  executor.py  generator.py  git.py  llm.py  parser.py  readiness.py  semantic_quality.py  session_summary.py  simulator.py  validator.py  web.py
cartero.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cartero/templates/: index.html  (+1 more)
context/: commit-context-changelog.txt  commit-context-cli-entrypoint.txt  commit-context-llm-hardening.txt  commit-context-session.txt  how-to-use-this-system.md  llm-project-instructions.md  llm-system-prompt.md  llm-update-instructions.md  master-context.md  system-state.md  update-history.md  user-instructions.candidate.md  user-instructions.md  validation-checklist.md  work-session-summary.txt
docs/: llm-instructions.md  phase5-learnings.md
tests/: test_canonical.py  test_cli.py  test_commit.py  test_commit_quality_regressions.py  test_context_state.py  test_executor.py  test_llm_generator.py  test_parser.py  test_phase5_extreme_cases.py  test_readiness.py  test_semantic_quality.py  test_session.py  test_session_help.py  test_simulator.py  test_validator.py  test_web.py
(+20 files in other folders)
